--- a/ESTILOS.css
+++ b/ESTILOS.css
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TITULO UNO PRINCIPAL</title>
+    <title>Title</title>
 </head>
 <body>
 
